Adjust position of separator in location bar.

The separator is positioned based on the layout of the label. Previously
we forgot to account for the width of the separator when laying out the
label, so in effect the label was 1dip too wide and the separator was
1dip too far to the right.

This only affects DSFs <2.

BUG=721741

Review-Url: https://codereview.chromium.org/2883843004
Cr-Commit-Position: refs/heads/master@{#472153}

Former-commit-id: 959d42beb82698415e47bfde4fc791e56aa422ed